feat: add API tests, OTEL Jaeger, Docker, Kafka setup